--- a/vinyl/scss/page2.scss
+++ b/vinyl/scss/page2.scss
@@ -1,100 +1,153 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+main div.item {
+  .color {
+    font-family: Montserrat;
+    margin-bottom: 3px;
   }
-  main div.item {
-    .color {
+
+  span {
+    &.price {
       font-family: Montserrat;
-      margin-bottom: 3px;
+      font-size: 15px;
     }
-    span {
-      &.price {
-        font-family: Montserrat;
-        font-size: 15px;
-      }
-      &.text {
-        font-family: thin;
-        font-size: 15px;
-      }
+
+    &.text {
+      font-family: thin;
+      font-size: 15px;
     }
   }
-  #mainContent {
-    background-color: rgb(255, 255, 255);
-    padding-top: 70px;
+}
+
+#mainContent {
+  background-color: rgb(255, 255, 255);
+  padding-top: 70px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.item {
+  flex-basis: 100%;
+  margin-bottom: 20px;
+}
+
+.player {
+  display: flex;
+  align-items: center;
+}
+
+.playerImage img {
+  width: 500px;
+  height: auto;
+  margin-right: 20px;
+}
+
+.playerDetails {
+  p {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0;
+  }
+
+  span {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0;
+    display: block;
+    font-size: 16px;
+    margin-bottom: 5px;
+  }
+
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+}
+
+.playerName {
+  font-family: Montserrat-bold;
+  size: 30px;
+}
+
+.playerDetails {
+  p {
+    font-family: Montserrat-bold;
+    display: inline;
+    margin: 0;
+  }
+
+  span {
+    font-size: 16px;
+    margin-bottom: 5px;
+  }
+}
+
+.player .text {
+  display: inline;
+}
+
+@media (max-width: 700px) {
+  main#mainContent div.item {
+    width: 100%;
+    margin-bottom: 20px;
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
   }
-  .item {
-    flex-basis: 100%;
+
+  .player {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .playerImage img {
+    width: 70%;
+    height: auto;
+    margin-right: 0;
     margin-bottom: 20px;
   }
-  .player {
-    display: flex;
+
+  .playerDetails {
+    font-size: 3vw;
     align-items: center;
-  }
-  .playerImage img {
-    width: 500px;
-    height: auto;
-    margin-right: 20px;
-  }
-  .playerDetails {
-    p {
-      display: inline-block;
-      vertical-align: middle;
-      margin: 0;
-    }
+    text-align: center;
+
     span {
-      display: inline-block;
-      vertical-align: middle;
-      margin: 0;
-      display: block;
-      font-size: 16px;
-      margin-bottom: 5px;
+      font-size: 2.5vw;
     }
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
   }
+
   .playerName {
-    font-family: Montserrat-bold;
-    size: 30px;
+    font-size: 4vw;
   }
+
+  footer#mainFoot {
+    height: auto;
+  }
+}
+
+@media (max-width: 430px) {
+  main#mainContent {
+    padding-top: 50px;
+  }
+
+  .playerImage img {
+    width: 60%;
+  }
+
   .playerDetails {
-    p {
-      font-family: Montserrat-bold;
-      display: inline;
-      margin: 0;
-    }
+    font-size: 3.5vw;
+
     span {
-      font-size: 16px;
-      margin-bottom: 5px;
-    }
-  }
-  .player .text {
-    display: inline;
-  }
-  @media (max-width: 575px) {
-    main#mainContent div.item {
-      width: 80%;
-      margin-bottom: 20px;
-    }
-    .player {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      flex-direction: column;
-      justify-content: center;
-      text-align: center;
-    }
-    .playerImage img {
-      width: 70%;
-      height: auto;
-    }
-    .playerDetails {
       font-size: 3vw;
     }
-    footer#mainFoot {
-      height: auto;
-    }
   }
+
+  .playerName {
+    font-size: 5vw;
+  }
+}
