--- a/vinyl/good.css
+++ b/vinyl/good.css
@@ -141,11 +141,11 @@ img {
   width: 100%;
 }
 .sim-slider {
+  position: relative;
   max-width: 900px;
   min-width: 320px;
   margin: 20px auto;
   padding: 30px 50px;
-  position: relative;
 }
 .sim-slider-list {
   margin: 0;
@@ -163,41 +163,102 @@ img {
   top: 0;
   display: block;
 }
-div.sim-slider-arrow-left, div.sim-slider-arrow-right {
+.sim-slider-arrow-left, .sim-slider-arrow-right {
   width: 22px;
   height: 40px;
   position: absolute;
-  margin-top: 180px;
+  top: 170%;
+  transform: translateY(210%);
   cursor: pointer;
   opacity: 0.6;
   z-index: 4;
 }
-div.sim-slider-arrow-left {
-  left: 30px;
-  top: 40%;
-  display: block;
+.sim-slider-arrow-left {
+  left: 40px; 
   background: url("http://pvbk.spb.ru/inc/slider/sim-files/sim-arrow-left.png") no-repeat;
 }
-div.sim-slider-arrow-right {
-  right: 30px;
-  top: 40%;
-  display: block;
+
+.sim-slider-arrow-right {
+  right: 30px; 
   background: url("http://pvbk.spb.ru/inc/slider/sim-files/sim-arrow-right.png") no-repeat;
 }
 div.sim-slider-arrow-left:hover, div.sim-slider-arrow-right:hover {
   opacity: 1;
 }
+@media (max-width: 768px) {
+  .sim-slider-arrow-left, .sim-slider-arrow-right {
+    transform: translateY(100%);
+  }
+  .sim-slider-arrow-left {
+    left: 30px; 
+    background: url("http://pvbk.spb.ru/inc/slider/sim-files/sim-arrow-left.png") no-repeat;
+  }
+  
+  .sim-slider-arrow-right {
+    right: -20px; 
+    background: url("http://pvbk.spb.ru/inc/slider/sim-files/sim-arrow-right.png") no-repeat;
+  }
+  h3, strong {
+    font-size: 16px;
+  }
+
+  p, ol li {
+    font-size: 12px;
+  }
+
+  #backButton, #closeButton {
+    font-size: 12px;
+  }
+
+  .sale {
+    font-size: 12px;
+    padding: 10px 20px;
+  }
+
+  .photo {
+    width: 90%;
+    height: auto;
+    margin-left: 10px;
+  }
+
+  .text{
+    padding-left: 10px;
+  }
+
+  .photo img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .text {
+    width: 90%;
+    margin: 10px auto;
+  }
+}
 @media (max-width: 600px) {
+  .sim-slider-arrow-left, .sim-slider-arrow-right {
+    transform: translateY(190%);
+  }
+  .sim-slider-arrow-left {
+    left: 30px; 
+    background: url("http://pvbk.spb.ru/inc/slider/sim-files/sim-arrow-left.png") no-repeat;
+  }
+  
+  .sim-slider-arrow-right {
+    right: -30px; 
+    background: url("http://pvbk.spb.ru/inc/slider/sim-files/sim-arrow-right.png") no-repeat;
+  }
   .container {
     flex-direction: column;
   }
   .photo {
-    width: 100%;
+    width: 90%;
     margin: 10px 0;
+    margin-bottom: 20px;
   }
   .text {
     width: 100%;
-    margin: 350px auto;
+    margin-top: 65%;
   }
   #backButton:hover {
     border-radius: 20px;
