--- a/vinyl/page2.css
+++ b/vinyl/page2.css
@@ -68,27 +68,55 @@ main div.item span.text{
 .player .text {
     display: inline; 
 }
-@media (max-width: 575px) {
+@media (max-width: 700px) {
     main#mainContent div.item {
-        width: 80%; 
+        width: 100%; 
         margin-bottom: 20px;
+        display: flex;
+        justify-content: center; 
     }
     .player {
-        display: flex;
-        flex-direction: column; 
-        align-items: center;
         flex-direction: column;
-        justify-content: center; 
-        text-align: center; 
+        align-items: center;
+        justify-content: center;
+        text-align: center;
     }
     .playerImage img {
         width: 70%;
-        height: auto; 
+        height: auto;
+        margin-right: 0; 
+        margin-bottom: 20px; 
     }
     .playerDetails {
-        font-size: 3vw; 
+        font-size: 3vw;
+        align-items: center; 
+        text-align: center; 
     }
+    .playerDetails span {
+        font-size: 2.5vw; 
+    }
+    .playerName {
+        font-size: 4vw; 
+    }
+
     footer#mainFoot {
         height: auto;
+    }
+}
+@media (max-width: 430px) {
+    main#mainContent {
+        padding-top: 50px;
+    }
+    .playerImage img {
+        width: 60%; 
+    }
+    .playerDetails {
+        font-size: 3.5vw; 
+    }
+    .playerDetails span {
+        font-size: 3vw; 
+    }
+    .playerName {
+        font-size: 5vw; 
     }
 }
