--- a/vinyl/scss/page1.scss
+++ b/vinyl/scss/page1.scss
@@ -1,20 +1,109 @@
 main#mainContent {
-    background-color: rgb(129, 89, 78);
+  background-color: rgb(129, 89, 78);
+  width: 100%;
+  padding-top: 70px;
+  padding-bottom: 20px;
+  height: fit-content;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  gap: 30px;
+  margin-top: 20px;
+}
+
+.album {
+  display: flex;
+  width: 500px;
+  align-items: center;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.cover {
+  flex: 0 0 150px;
+  margin-right: 20px;
+
+  img {
     width: 100%;
-    padding-top: 70px;
-    padding-bottom: 20px;
-    height: fit-content;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
+    border-radius: 50%;
   }
+}
+
+.albumDetails {
+  flex: 1;
+}
+
+.albumName {
+  font-weight: bold;
+}
+
+.genre {
+  color: #666;
+}
+
+main div.item div.cover {
+  width: 100%;
+  height: 800px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+div.cover img {
+  width: 300px;
+  height: 300px;
+  box-shadow: black 0px 0px 3px;
+}
+
+main div.item {
+  .album {
+    width: 100%;
+  }
+
+  span {
+    width: 100%;
+    display: block;
+    text-align: center;
+
+    &.albumName {
+      font-family: Montserrat;
+      font-size: 18px;
+    }
+
+    &.genre {
+      font-family: thin;
+    }
+  }
+}
+
+.albumDetails a {
+  margin-top: 15px;
+  margin-left: -15px;
+  text-align: center;
+  font-family: thin;
+  display: inline-block;
+  padding: 5px 10px;
+  background-color: rgb(73, 45, 45);
+  color: white;
+  width: 170px;
+  text-decoration: none;
+  border-radius: 10px;
+}
+
+@media screen and (max-width: 768px) {
   .container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: auto;
-    gap: 30px;
-    margin-top: 20px;
+    grid-template-columns: 1fr;
   }
+
   .album {
     display: flex;
     width: 500px;
@@ -23,101 +112,95 @@ main#mainContent {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  .cover {
-    flex: 0 0 150px;
-    margin-right: 20px;
-   img {
-      width: 100%;
-      border-radius: 50%;
+    transition: box-shadow 0.3s, transform 0.3s;
+
+    &:hover {
+      box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+      transform: translateY(-5px);
     }
   }
+
+  .cover {
+    flex: 0 0 auto;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
   .albumDetails {
     flex: 1;
   }
-  .albumName {
-    font-weight: bold;
-  }
-  .genre {
-    color: #666;
-  }
-  main div.item div.cover {
-    width: 100%;
-    height: 800px;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
+}
+
+@media screen and (max-width: 768px) {
+  .album {
+    flex-direction: column;
     align-items: center;
   }
-  div.cover img {
-    width: 300px;
-    height: 300px;
-    box-shadow: black 0px 0px 3px;
+
+  .cover {
+    margin-right: 0;
+    margin-bottom: 20px;
   }
-  main div.item {
-    .album {
-      width: 100%;
-    }
-    span {
-      width: 100%;
-      display: block;
-      text-align: center;
-     &.albumName {
-        font-family: Montserrat;
-        font-size: 18px;
-      }
-      &.genre {
-        font-family: thin;
-      }
+}
+
+@media screen and (max-width: 500px) {
+  .container {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+
+  .album {
+    width: 100%;
+    padding: 15px;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+  }
+
+  .cover {
+    flex: 0 0 100px;
+    margin-right: 0;
+    margin-bottom: 15px;
+
+    img {
+      width: 100px;
+      height: 100px;
     }
   }
-  .albumDetails a {
-    margin-top: 15px;
-    margin-left: -15px;
+
+  .albumDetails {
+    flex: 1;
     text-align: center;
-    font-family: thin;
-    display: inline-block;
+  }
+
+  .albumName {
+    font-size: 16px;
+  }
+
+  .genre {
+    font-size: 14px;
+  }
+
+  .albumDetails a {
+    margin-top: 10px;
     padding: 5px 10px;
-    background-color: rgb(73, 45, 45);
-    color: white;
-    width: 170px;
-    text-decoration: none;
-    border-radius: 10px;
+    width: 180px;
   }
-  @media screen and (max-width: 768px) {
-    .container {
-      grid-template-columns: 1fr;
+
+  main div.item div.cover {
+    height: 400px;
+  }
+
+  div.cover img {
+    width: 200px;
+    height: 200px;
+  }
+
+  main div.item span {
+    &.albumName {
+      font-size: 16px;
     }
-   .album {
-      display: flex;
-      width: 500px;
-      align-items: center;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      transition: box-shadow 0.3s, transform 0.3s;
-      &:hover {
-        box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
-        transform: translateY(-5px);
-      }
-    }
-    .cover {
-      flex: 0 0 auto;
-      margin-right: 0;
-      margin-bottom: 20px;
-    }
-    .albumDetails {
-      flex: 1;
+
+    &.genre {
+      font-size: 14px;
     }
   }
-  @media screen and (max-width: 768px) {
-    .album {
-      flex-direction: column;
-      align-items: center;
-    }
-    .cover {
-      margin-right: 0;
-      margin-bottom: 20px;
-    }
-  }
+}
